Fix: Hide overflow in body

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -93,6 +93,7 @@
 
 body {
   background-color: #3d3d3d;
+  overflow: hidden;
 }
 
 .predictions-wrapper {
